--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "whack-a-vue",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://whackavue.netlify.app/",
+  "keywords": ["vue", "tailwind", "tailwindcss"],
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
